[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/graphics/characters/ice_wyverngoyle.png" type="Texture" id=1]
[ext_resource path="res://assets/wyvernshield/scenes/combat_npc.gd" type="Script" id=2]
[ext_resource path="res://assets/wyvernshield/trigger_reactions/defense.tres" type="Resource" id=3]
[ext_resource path="res://assets/wyvernshield/trigger_reactions/vfx/damage_numbers.tres" type="Resource" id=4]
[ext_resource path="res://addons/wyvernshield_RPG/stat_sheet.gd" type="Script" id=5]
[ext_resource path="res://assets/wyvernshield/stat_sheets/enemy/enemy1.tres" type="Resource" id=6]
[ext_resource path="res://addons/wyvernshield_RPG/hurtbox.gd" type="Script" id=7]
[ext_resource path="res://addons/wyvernshield_RPG/status_effects/status_carrier.gd" type="Script" id=8]
[ext_resource path="res://addons/wyvernshield_RPG/combat_actor.gd" type="Script" id=9]
[ext_resource path="res://assets/wyvernshield/trigger_reactions/vfx/damage_numbers_dot_status.tres" type="Resource" id=10]
[ext_resource path="res://addons/wyvernshield_RPG/status_effects/status_carrier_view.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/wyvernshield_RPG/combat_powers/damage_area.gd" type="Script" id=12]
[ext_resource path="res://addons/wyvernshield_RPG/triggers/trigger_reaction.gd" type="Script" id=13]
[ext_resource path="res://assets/wyvernshield/trigger_reactions/_function_sheets/basic_reactions.gd" type="Script" id=14]
[ext_resource path="res://assets/wyvernshield/status_effects/chilled.tres" type="Resource" id=15]

[sub_resource type="Resource" id=17]
resource_local_to_scene = true
resource_name = "Stats"
script = ExtResource( 5 )
stats_as_text = ""
subsheets = [ ExtResource( 6 ) ]
all_multiplier = 1.0

[sub_resource type="CylinderShape" id=2]
height = 0.8
radius = 0.25

[sub_resource type="Resource" id=24]
resource_name = "Chilled on Hit"
script = ExtResource( 13 )
trigger = 6
priority = 1000
reaction_class = ExtResource( 14 )
reaction_func = "apply_status_on_hit"
allow_duplicates = true
editor_extra = "Extra Vars:
0 - the effect
1 - duration, in econds
2 - potency (strength of the effect)"
extra_vars = [ ExtResource( 15 ), 3.0, 50.0 ]

[sub_resource type="SphereShape" id=22]
radius = 0.2

[sub_resource type="CylinderShape" id=1]
height = 0.5
radius = 0.3

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.154246 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1.5, 1.5, 1.5, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "init"

[node name="Npc" type="KinematicBody"]
collision_layer = 4
collision_mask = 16
script = ExtResource( 2 )

[node name="CombatActor" type="Spatial" parent="."]
script = ExtResource( 9 )
stats = SubResource( 17 )
initial_trigger_reactions = [ ExtResource( 4 ), ExtResource( 10 ), ExtResource( 3 ) ]

[node name="StatusCarrier" type="Node" parent="CombatActor"]
script = ExtResource( 8 )

[node name="Hurtbox" type="Area" parent="CombatActor"]
collision_layer = 0
collision_mask = 8
input_ray_pickable = false
script = ExtResource( 7 )

[node name="Shape" type="CollisionShape" parent="CombatActor/Hurtbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.044347, 0 )
shape = SubResource( 2 )

[node name="ContactDamage" type="Area" parent="CombatActor"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 12 )
pierce_count = -1
lifetime = -1.0
damage = 8.0
hit_trigger_reactions = [ SubResource( 24 ) ]

[node name="Shape" type="CollisionShape" parent="CombatActor/ContactDamage"]
shape = SubResource( 22 )

[node name="Shape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0724338, 0 )
pixel_size = 0.02
billboard = 1
alpha_cut = 1
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "init"
anims/RESET = SubResource( 23 )
anims/hurt = SubResource( 20 )
anims/init = SubResource( 21 )

[node name="StatusView" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.806453, 0 )

[connection signal="health_changed" from="CombatActor" to="." method="_on_combat_health_changed"]
[connection signal="health_depleted" from="CombatActor" to="." method="_on_combat_health_depleted"]
[connection signal="stats_changed" from="CombatActor" to="." method="_on_combat_stats_changed"]
[connection signal="status_effect_applied" from="CombatActor/StatusCarrier" to="StatusView" method="_on_status_effect_applied"]
[connection signal="status_effect_removed" from="CombatActor/StatusCarrier" to="StatusView" method="_on_status_effect_removed"]
